# tilewordquiz

./: Privacy-Policy.md  README.md
.github/: copilot-instructions.md
.github/workflows/: gh-pages.yml
src/: index.html  main.js  questions.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: styles.css
src/js/: ai.js  main.js  questions.js  settings.js
